fixing issue preventing IE11 from clicking on links in stuck cells

--- a/src/stick-n-slide.scss
+++ b/src/stick-n-slide.scss
@@ -33,7 +33,7 @@ table.sns {
         (as, from the rendering engine perspective, it is no longer a part of the table).
         We need to add these borders back via some css generated elements.
       */
-      &:not(.sns__placeholder-cell), .sns__cell-contents {
+      &:not(.sns__placeholder-cell) {
         b {
           position: relative;
           z-index: 1;
